# qwen_moe

./: .gitignore  base_content.py  common.py  ds2_moe_block.ipynb  ds2_v1.py  mixtral_moe.ipynb  mixtral_v1.py  oss_moe.ipynb  oss_v1.py  pyproject.toml  qwen_moe_block.ipynb  qwen_v1.py  qwen_v2.py  v1.py
benchmark/: benchmark.py  convert_hf_to_gguf.py  convert_hf_to_gguf_update.py  first_generate_codecarbon.json  generate_codecarbon.json  llama_cpp_deepseek-ai_benchmark.json  llamacpp_test.py  load_model_codecarbon.json  prefill_codecarbon.json  pytorch_Qwen_benchmark.json  pytorch_deepseek-ai_benchmark.json  pytorch_deepseek_v2_lite_benchmark.json  pytorch_qwen_benchmark.json  qwen_bench.ipynb  transformers_qwen_benchmark.json  vllm_Qwen_benchmark.json  vllm_bench.sh  vllm_deepseek_v2_lite_benchmark.json
quant/: awq_quant.py
