[project]
name = "qwen-moe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "codecarbon>=3.0.8",
    "datasets>=4.3.0",
    "gguf>=0.17.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "numpy~=1.26.4",
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.15.0",
    "opentelemetry-sdk>=1.38.0",
    "optimum-benchmark>=0.6.0",
    "pandas-profiling>=3.6.6",
    "protobuf>=4.21.0,<5.0.0",
    "sentencepiece~=0.2.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "widgetsnbextension>=4.0.15",
]
